2008-08-14  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeclassbinding.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodegeneratorstruct.vala:

	Use finalize instead of dispose to free instance data as dispose
	should only be used where it is necessary to break reference
	cycles, and this is possible by manually overriding the dispose
	method

2008-08-14  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Add missing casts and checks for non-GObject classes

2008-08-14  Jared Moore  <jaredm@svn.gnome.org>

	* gobject/valaccodegenerator.vala:

	Fixed codegen of abstract property accessors, bug 547226.

	* tests/classes-properties.vala:
	* tests/classes-properties.exp:

	Added test case for abstract property accessors.

2008-08-10  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/packages/gstreamer-0.10/gstreamer-0.10-custom.vala:

	Add ref functions for Gst.Caps

	* vapi/gstreamer-0.10.vapi: regenerated

2008-08-11  Jared Moore  <jaredm@svn.gnome.org>

	* vala/valasemanticanalyzer.vala:

	Fixed segfault in ternary expressions, bug 547165.

2008-08-10  Jürg Billeter  <j@bitron.ch>

	* vala/valacodecontext.vala:
	* gobject/valaccodeclassbinding.vala:
	* gobject/valaccodeinterfacebinding.vala:
	* gobject/valaclassregisterfunction.vala:
	* gobject/valainterfaceregisterfunction.vala:
	* gobject/valatyperegisterfunction.vala:
	* compiler/valacompiler.vala:

	Add --target-glib command-line option, default to 2.12,
	based on patch by Jared Moore, fixes bug 544990

2008-08-10  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala:

	Support IntegerType and FloatingType attributes,
	patch by Emmanuele Bassi, fixes bug 544522

2008-08-10  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add GCompletion binding, patch by Abderrahim Kitouni,
	fixes bug 546252

2008-08-10  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/vte/:

	Fix vte_terminal_get_cursor_position binding,
	patch by Anthony Taylor, fixes bug 546238
